--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://img.icons8.com/?size=100&id=5tk64ASe7tdw&format=png&color=000000"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Social Media</title>
+    <title>Social Media - Hussnain</title>
   </head>
   <body>
     <div id="root"></div>
