Author name added in meta data

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Syed Muhammad Hussnain Raza" />
     <link
       rel="icon"
       type="image/svg+xml"
